--- a/package.json
+++ b/package.json
@@ -5,16 +5,37 @@
   "description": "api for whofundsme",
   "main": "api.js",
   "scripts": {
+    "lint": "eslint . --fix",
+    "start": "node -r dotenv/config app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-json": "^2.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-json": "^1.2.0",
+    "jest": "^22.4.2"
+  },
   "dependencies": {
+    "@babel/preset-env": "^7.1.6",
+    "apollo-server": "^2.2.2",
     "axios": "^0.9.1",
     "body-parser": "~1.10.2",
     "cors": "^2.5.3",
+    "dotenv": "^6.1.0",
     "express": "~4.11.1",
+    "graphql": "^14.0.2",
+    "graphql-import": "^0.7.1",
+    "isomorphic-fetch": "^2.2.1",
     "jade": "~1.9.1",
     "mongodb": "^2.0.27",
     "mongoose": "^4.0.1",
+    "prisma-binding": "^2.1.6",
+    "prisma-client-lib": "^1.20.6",
     "request": "^2.55.0"
   },
   "author": "David Daniel <davidedaniel@gmail.com> (http://davidedaniel.github.io)"
